feat: add put endpoint to update volunteer
