# backend/src/config/swagger-output.json
@@ -133,8 +133,8 @@
           "201": {
             "description": "Created"
           },
-          "417": {
-            "description": "Expectation Failed"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -212,8 +212,8 @@
           "201": {
             "description": "Created"
           },
-          "417": {
-            "description": "Expectation Failed"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -545,6 +545,30 @@
     "/api/volunteer/": {
       "get": {
         "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/volunteer/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
